--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,8 @@
+<nav style="margin-bottom: 20px;">
+  <button onclick="location.href='/'">🏠 Trang chính</button>
+  <button onclick="location.href='/missions'">🗺️ Quản lý Missions</button>
+</nav>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
